1.0.5:
	- Change sizing options of icon view to work around Gnome 2.20
	- Use filename as title when adding files without metadata
	- Make the extras store case insensitive on the key: multiple
	  fields differing only in case are no longer allowed (Alexey Balmashnov)
	- Use the 'url' extra field for web linking (Alexey Balmashnov)
	- Handle multiple keyword fields in import (Alexey Balmashnov)
	- Include doi field in bibtex export
	- Fix generating thumbnails for non-pdf files

1.0.4:
	- Fix import in non-UTF8 locales
	- Tags exported as "keywords" bibtex field
	- Add clear icon to search entry
	- Remember window size
	- Tags sorted by name
	- Tooltips in icon view
	- German translation (Joachim Sauer)
	- Don't add .svn,CVS,.bib,.reflib when adding folder
	- Spanish translation (Mario César Señoranis Ayala)
	- Fixes for 64 bit architecture
	- Remove "Add Tag" dialog (Eric Lesh)
	- Add statusbar, replace progressdialog with progressbar
		in statusbar.
	- Prompt user to resolve duplicated files
	- Update bibutils to 3.32
	- Generate thumbnails for files on NFS mounts
	- Improved internationalization support
	- Prevent search box getting hidden in small windows
	- Ability to paste bibtex
	- Ability to copy \cite{keys}

1.0.3:
	- Option to export unicode bibtex
	- Implement "Manage BibTeX File"
	- Support new arXiv id format
	- Stop reading document if DOI/Arxiv is found on first page
	- Fix setting dirtyness of library in "Rename from Key" (Jordy Potman)
	- Reduce window clutter (Kai Willadsen)
	- Italian translation (Michele Mattioni)
	- Improve translatability of code (Kai Willadsen)
	- Intltool fixes (Eric Lesh)
	- Fix(?) taglist corruption bug
	- Use poppler glib bindings (Kai Willadsen)
	- Start using ucompose.hpp for string composition
	- Compile against mt-only boost_regex (Damien Thébault)
	- Fix "All files" filter to be * instead of *.*
	- Support InProceedings crossref records
	- RPM spec file (Davyd Madeley)
	- Add texttrademark unicode->latex